# jamsplit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MARKERS.md  README.md  RELEASING.md  TODO.md  index.html  jam-wav-splitter.md
.github/workflows/: ci.yml  release.yml
assets/icons/: jamsplit.icns
crates/jamsplit-cli/: Cargo.toml
crates/jamsplit-cli/src/: cli.rs  main.rs
crates/jamsplit-cli/tests/: cli_integration.rs
crates/jamsplit-cli/tests/common/: mod.rs
crates/jamsplit-core/: Cargo.toml
crates/jamsplit-core/src/: audio.rs  ffmpeg.rs  lib.rs  plan.rs  report.rs
crates/jamsplit-core/src/markers/: audacity.rs  dawproject.rs  mod.rs  plain.rs  reaper.rs
crates/jamsplit-core/tests/: export_integration.rs
crates/jamsplit-core/tests/common/: mod.rs
crates/jamsplit-gui/: Cargo.toml  build.rs
crates/jamsplit-gui/src/: app.rs  lib.rs  main.rs  state.rs  worker.rs
crates/jamsplit-gui/tests/: worker_integration.rs
crates/jamsplit-gui/tests/common/: mod.rs
docs/: gui-manual-test-checklist.md  spec-v1.md  spec.md
docs/superpowers/plans/: 2026-06-05-jamsplit-m1-engine-cli.md  2026-06-06-m2-egui-gui.md  2026-06-06-m3-release-packaging.md  2026-06-08-dawproject-import.md
docs/superpowers/specs/: 2026-06-05-jam-wav-splitter-design.md  2026-06-05-jamsplit-design.md  2026-06-08-dawproject-import-design.md
packaging/: NOTICE.txt  README.txt
scripts/: fetch-sidecars.sh  package.sh
