[package]
name = "jamsplit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jamsplit"
path = "src/main.rs"

[dependencies]
jamsplit-core = { path = "../jamsplit-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
