[package]
name = "jamsplit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
csv = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
roxmltree = "0.21"

[dev-dependencies]
tempfile = "3"
