[package]
name = "jamsplit-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = "0.33"
image = { version = "0.25.10", default-features = false, features = ["png"] }
jamsplit-core = { path = "../jamsplit-core" }
open = "5.3.5"
rfd = "0.17.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
