[package]
name = "jamsplit-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = "0.33"
image = { version = "0.25.10", default-features = false, features = ["png"] }
jamsplit-core = { path = "../jamsplit-core" }
open = "5.3.5"
rfd = "0.17.2"

# wgpu (DX12, with the WARP software fallback) covers Windows machines
# without working OpenGL — VMs, RDP sessions, and fresh installs on the
# Basic Display driver — where the default glow renderer cannot start.
[target.'cfg(windows)'.dependencies]
eframe = { version = "0.33", features = ["wgpu"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
